# PU-Informatics

./: README.md
I курс/I триместър/Английски Език/: README.md
I курс/I триместър/Въведение в компютърните науки със C++/: README.md
I курс/I триместър/Въведение в компютърните науки със C++/Упражнения/Упражнение 04/: CMakeLists.txt  vkn_04_01.cpp  vkn_04_02.cpp  vkn_04_03.cpp  vkn_04_04.cpp  vkn_04_05.cpp  vkn_04_06.cpp  vkn_04_07.cpp  vkn_04_08.cpp  vkn_04_09.cpp  vkn_04_10.cpp  vkn_04_11.cpp  vkn_04_12.cpp  vkn_04_13.cpp  vkn_04_14.cpp  vkn_04_15.cpp  vkn_04_16.cpp
I курс/I триместър/Въведение в компютърните науки със C++/Упражнения/Упражнение 05/: CMakeLists.txt  vkn_05_01.cpp  vkn_05_02.cpp  vkn_05_03.cpp  vkn_05_04.cpp  vkn_05_05.cpp  vkn_05_06.cpp  vkn_05_07.cpp  vkn_05_08.cpp  vkn_05_09.cpp  vkn_05_10.cpp  vkn_05_11.cpp  vkn_05_12.cpp  vkn_05_13.cpp  vkn_05_14.cpp  vkn_05_15.cpp  vkn_05_16.cpp  vkn_05_17.cpp  vkn_05_18.cpp  vkn_05_19.cpp  vkn_05_20.cpp  vkn_05_21.cpp  vkn_05_22.cpp  vkn_05_23.cpp  vkn_05_24.cpp  vkn_05_25.cpp  vkn_05_26.cpp  vkn_05_27.cpp
I курс/I триместър/Линейна алгебра и аналитична геометрия/: README.md
I курс/II триместър/Английски език/: Ia ft 2021 W.docx  README.md
I курс/II триместър/Информационни технологии/: README.md
I курс/II триместър/Програмирaне C++/: README.md  Лабораторна работа.docx
I курс/III триместър/Математически анализ/: README.md
I курс/III триместър/Операционни системи/: README.md  Изпит по Операционни системи.docx
Допълнителни дисциплини/: README.md
Материали/: README.md
(+1979 files in other folders)
