cmake_minimum_required(VERSION 3.21)
project(Exercise_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_4
        vkn_04_01.cpp
        vkn_04_02.cpp
        vkn_04_03.cpp
        vkn_04_04.cpp
        vkn_04_05.cpp
        vkn_04_06.cpp
        vkn_04_07.cpp
        vkn_04_08.cpp
        vkn_04_09.cpp
        vkn_04_10.cpp
        vkn_04_11.cpp
        vkn_04_12.cpp
        vkn_04_13.cpp
        vkn_04_14.cpp
        vkn_04_15.cpp
        vkn_04_16.cpp)
