cmake_minimum_required(VERSION 3.21)
project(Exercise_5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercise_5
        vkn_05_01.cpp
        vkn_05_02.cpp
        vkn_05_03.cpp
        vkn_05_04.cpp
        vkn_05_05.cpp
        vkn_05_06.cpp
        vkn_05_07.cpp
        vkn_05_08.cpp
        vkn_05_09.cpp
        vkn_05_10.cpp
        vkn_05_11.cpp
        vkn_05_12.cpp
        vkn_05_13.cpp
        vkn_05_14.cpp
        vkn_05_15.cpp
        vkn_05_16.cpp
        vkn_05_17.cpp
        vkn_05_18.cpp
        vkn_05_19.cpp
        vkn_05_20.cpp
        vkn_05_21.cpp
        vkn_05_22.cpp
        vkn_05_23.cpp
        vkn_05_24.cpp
        vkn_05_25.cpp
        vkn_05_26.cpp
        vkn_05_27.cpp)
